labs/examples/design-patterns-examples/src/com/examples/design/solid/d/good/SuperWorker.java
package com.examples.design.solid.d.good;

public class SuperWorker  implements IWorker{
    public void work() {
        //.... working much more
    }
}