labs/examples/design-patterns-examples/src/com/examples/design/solid/d/bad/SuperWorker.java
package com.examples.design.solid.d.bad;

public class SuperWorker {
    public void work() {
        //.... working much more
    }
}